_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <label>Agreement</label>
    <nameField>
        <displayFormat>AGR-{0000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>