_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>ROE</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>PAL Addendum</fullName>
            </value>
            <value>
                <fullName>MSA Addendum</fullName>
            </value>
            <value>
                <fullName>2nd ISP NEMA</fullName>
            </value>
            <value>
                <fullName>2nd ISP MSA Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>