_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/IronClad_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>IronClad_Contract_Status__c</fullName>
    <description>Contract status from IronClad (active, evergreen, expiring, etc.)</description>
    <label>IronClad Contract Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>