_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/IronClad_ID__c.field-meta.xml
<CustomField>
    <fullName>IronClad_ID__c</fullName>
    <externalId>true</externalId>
    <label>IronClad ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>