_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/IronClad_Record__c.field-meta.xml
<CustomField>
    <fullName>IronClad_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the matched IronClad contract record</description>
    <label>IronClad Record</label>
    <referenceTo>IronClad__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>