_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/IronClad_Stage__c.field-meta.xml
<CustomField>
    <fullName>IronClad_Stage__c</fullName>
    <description>Workflow stage from IronClad (completed, sign, review, etc.)</description>
    <label>IronClad Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>