_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/IronClad_URL__c.field-meta.xml
<CustomField>
    <fullName>IronClad_URL__c</fullName>
    <label>IronClad URL</label>
    <type>Url</type>
</CustomField>