_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>