_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline</label>
    <type>Text</type>
</CustomField>