_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Location</label>
    <referenceTo>Property_Location__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>