_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements Signed</relationshipLabel>
    <relationshipName>Agreements_Signed</relationshipName>
    <type>Lookup</type>
</CustomField>