_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/listViews/All_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>IronClad_Stage__c</columns>
    <columns>IronClad_Contract_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>IronClad_ID__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Signed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Agreements</label>
</ListView>