_archive_deploys/temp-cleanup-reports/force-app/main/default/objects/Agreement__c/listViews/BUS_All.listView-meta.xml
<ListView>
    <fullName>BUS_All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pipeline__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <label>BUS - All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>